# debateFloor

./: .env.example  .gitattributes  .gitignore  BLOG.md  BRAHMASTRA.md  CLAUDE.md  Dockerfile  HACKATHON_CONSTRAINTS.md  IMPLEMENTATION_LOG.md  PITCH_CHECKLIST.md  PLAN.md  README.md  VALIDATION_REPORT.md  Validation_Audit_V2.md  context.md  gradio_app.py  guide.md  inference.py  inference_debatefloor.py  openenv.yaml  pre_validation_script.py  push_new4_high4_to_hf.py  push_to_hf.py  pyproject.toml  requirements.txt  roadmap.md  start.sh  testCalibration.py
app/: __init__.py  environment.py  main.py  models.py  rubrics.py  session_store.py  tasks.py
ci/: smoke_import.py  test_clean_claim_episode.py  test_concurrent_sessions.py  validate_submission.py
docs/: BLOG.md  CONTEXT.md  Final_Execution_Plan.md  HFBlogPost.md  PITCH_DECK.md  SESSION_CONTEXT.md  SUBMISSION_CHECKLIST.md  VideoScript_ClaimCourt.md  guide.md  roadmap.md  skill.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
reports/: component_shift_summary.json  eval_report.json  eval_report.md  http_rollout_eval.json  http_rollout_eval.md  training_summary.json
scripts/: evaluate_http_rollouts.py  generate_eval_report.py  hf_space_eval.py
server/: __init__.py  app.py  calibration_grader.py  claim_generator.py
tests/: test_calibration.py  test_generator.py
tools/: regenerate_plots.py
train/: final_component_eval.py  generate_eval_report.py  jobs_run.py  post_training_eval.py  push_to_hf_space.py  real_model_eval.py  real_model_eval_api.py  requirements.txt  (+4 more)
(+16 files in other folders)
