[project]
name = "debatefloor"
version = "0.2.3"
description = "OpenEnv-compliant RL environment for calibrated insurance fraud decisions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Aniket Aslaliya" },
  { name = "Mitali Mehta" },
  { name = "Aditya Sharma" },
]
keywords = ["openenv", "reinforcement-learning", "llm", "calibration", "insurance", "grpo"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/AniketAsla/debatefloor"
Repository = "https://github.com/AniketAslaliya/debateFloor"
Blog = "https://huggingface.co/blog/AniketAsla/debatefloor"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "server*"]
